--- a/testing_CV.html
+++ b/testing_CV.html
@@ -1622,7 +1622,7 @@ pre code {
 <p><strong>Professor and Chair of Child &amp; Adolescent Psychiatry at University College London</strong></p>
 <p><a href="mailto:a.stringaris@ucl.ac.uk" class="email">a.stringaris@ucl.ac.uk</a><br />
 Address for Correspondence: 1-19 Torrington Pl, London WC1E 7HB, United Kingdom</p>
-<p>Version: October 21 2022</p>
+<p>Version: November 30 2022</p>
 <div id="overview" class="section level3">
 <h3>Overview</h3>
 <p>I am a clinician and neuroscientist. I was appointed Chair of Child and Adolescent Psychiatry at UCL in January 2022. Until then, I was Senior Investigator and Chief of the Section of Clinical and Computational Psychiatry at NIMH/NIH in the USA and before that a Senior Lecturer and a Wellcome Trust Fellow at the Institute of Psychiatry Psychology and Neuroscience, King’s College London. I trained in Child and Adolescent Psychiatry at the Maudsley Hospital.</p>
@@ -1630,12 +1630,12 @@ Address for Correspondence: 1-19 Torrington Pl, London WC1E 7HB, United Kingdom<
 <p>In terms of basic research, my aim is to understand how affective phenomena (variably termed moods, emotions, feelings or affects) are generated and maintained.</p>
 <p>In terms of clinical research, I study interventions that reduce the negative impact that affective phenomena, particularly depression, have on young people and families.</p>
 <p>I am 48 years old, a husband and father of three daughters. I row competitively on Concept2 and read hard-copy books.</p>
-<p>My h-index = 56 and here is a <a href="https://pubmed.ncbi.nlm.nih.gov/?term=stringaris+a&amp;sort=date">list of my publications</a> and here is my <a href="https://scholar.google.com/citations?user=9B82424AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar page</a>.</p>
+<p>My h-index = 57 and here is a <a href="https://pubmed.ncbi.nlm.nih.gov/?term=stringaris+a&amp;sort=date">list of my publications</a> and here is my <a href="https://scholar.google.com/citations?user=9B82424AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar page</a>.</p>
 </div>
 <div id="current-positions" class="section level3">
 <h3>Current Positions</h3>
 <p><strong>Professor of Child and Adolescent Psychiatry</strong><br />
-Department of Psychiatry and Department of Clinical, Educational &amp; Health Psychology University College London</p>
+Division of Psychiatry and Department of Clinical, Educational &amp; Health Psychology University College London</p>
 </div>
 <div id="other-positions" class="section level3">
 <h3>Other positions</h3>
@@ -1704,10 +1704,12 @@ Central Institute of Mental Health (Zentralinstitut für Seelische Gesundheit), 
 <li>Editor (2012-2019) Journal of Child Psychology and Psychiatry</li>
 <li>Editorial Board (2015 ongoing): Journal of the American Academy of Child &amp; Adolescent Psychiatry</li>
 </ul>
-<p><strong>Taskforce and Scientific Board Memberships</strong> I have been invited to participate as a member or scientific advisor in the following:</p>
+<p><strong>Taskforce and Scientific Board Memberships</strong></p>
 <ul>
-<li>Member of the European College of Neuropharmacology (ECNP) Child and Adolescent Psychiatry Network.</li>
-<li>Member Scientific Advisory Group of Improving Adolescent mentaL health by reducing the Impact of PoVErty (ALIVE), a Wellcome trust-funded international project.</li>
+<li>Member of the European College of Neuropharmacology (ECNP) Child and Adolescent Psychiatry Network.<br />
+</li>
+<li>Member Scientific Advisory Group of Improving Adolescent mentaL health by reducing the Impact of PoVErty<br />
+(ALIVE), a Wellcome trust-funded international project.</li>
 <li>Scientific Board European Society of Child and Adolescent Psychiatry (ESCAP)</li>
 <li>Member of European ADHD Guidelines Group (EAGG)</li>
 <li>Member of the American Academy of Child and Adolescent Psychiatry Presidential Initiative Task Force on Emotion Regulation in Children : “Coming Together to Treat the Sickest Kids”- I was appointed chair of the Measurement Subcommittee</li>
@@ -1717,9 +1719,10 @@ Central Institute of Mental Health (Zentralinstitut für Seelische Gesundheit), 
 <li>Scientific Advisory Board Advisory Board for the Medical Research Council UK initiative in Adolescence, Mental Health and the Developing Mind</li>
 </ul>
 </div>
-<div id="prizes" class="section level3">
-<h3>Prizes</h3>
+<div id="prizes-and-distinctions" class="section level3">
+<h3>Prizes and Distinctions</h3>
 <ul>
+<li>2022 Highly Cited Researcher Clarivate Analytics</li>
 <li>2021 Open Neuro Hall of Fame, tied 2nd Place for contributing datasets</li>
 <li>2021 Kramer Pollnow Prize Award for scientific excellence in clinical research in<br />
 child,adolescent and adult psychiatry by the European Network of Hyperactivity Disorders (EUNETHYDIS)</li>
@@ -1783,6 +1786,21 @@ Servolo,Venice (March 2022) Challenges and New Directions in Affective Nosology<
 <div id="grants" class="section level3">
 <h3>Grants</h3>
 <ul>
+<li><p>Title:Surprises as a Mechanism of Improvement in the Psychological Therapy of Anxiety and Depression in Young People<br />
+Position: PI<br />
+Funding Body: Wellcome Trust<br />
+Amount:£3,015,694.19<br />
+Outcome: pending</p></li>
+<li><p>Title: How does the SSRI fluoxetine work in adolescent depression?<br />
+Position: Co-I and site PI (overall PI Prof Harmer London)<br />
+Funding Body: Wellcome Trust<br />
+Amount:£2,570,720.00<br />
+Outcome: pending</p></li>
+<li><p>Title:NIHR/HTA 22/88 Repetitive Transcranial Magnetic Stimulation for depression in adolescents Position: Co-I and site PI (overall PI Dr Rogers, Birmingham)<br />
+Funding Body: National Institute of Health Research Amount:£118,139.74 Outcome: pending</p></li>
+<li><p>Title: Amending and Upgrading Guidance for boosting MENTal health in young people (AUGMENT)<br />
+Position: Co-I and site PI (overall PI Prof Buitelaar Nijmegen)<br />
+Funding Body: European Union, Horizon 2020 Amount:£405,104.33 Outcome: pending</p></li>
 <li><p>Title: 4M: Microbes, Milk, Mental Health and Me; how do early life gut microbiota and feeding shape long- term mental health in the C-GULL Cohort?<br />
 Position: Co-Investigator (5% of my time)<br />
 Funding Body: Wellcome Trust<br />
@@ -1880,16 +1898,20 @@ I have recently received two prizes for my mentorship at NIH, namely the - 2019 
 <li><p>Dr Selina Wolke: PhD awarded “without corrections” May 2018</p></li>
 <li><p>Dr Pablo Vidal-Ribas: PhD awarded “without corrections” March 2019 Awarded one of the 2019 Outstanding PhD Thesis Prizes from King’s College London.</p></li>
 </ul>
-<p><strong>MSc Students</strong></p>
+<p><strong>Doctoral Students</strong> I currently supervise two Psychology Doctoral Students</p>
+<p><strong>MSc Students</strong> I supervise students for the UCL Child and Adolescent Mental Health course</p>
 <p>I have mentored between 2009-2015 nine MSc students for the course in Child and Adolescent Psychiatry at King’s College London. Many of them won distinctions, such as Dr Sumudu Ferdinando who came first in her cohort for that year with top marks for her dissertation.</p>
 <p><strong>Other post-graduate Students</strong></p>
 <p>I have mentored between 2016 to Present more than 10 Intramural Research Technical Assistants (IRTAs) in the intramural programme of the NIMH. Each one of them has ended up pursuing their career of interest with several of them joining prestigious courses in medicine in the US (e.g. Ms Lisa Gorham, Washington University at St Louis), Clinical Psychology or Psychology courses (e.g. Mr Chris Camp, Yale University).</p>
+<p><strong>Undergraduate Stduent</strong></p>
+<p>I supervise students for the Psychology BSc and am mentor to another two students</p>
 </div>
 <div id="taught-courses-and-other-supervision" class="section level3">
 <h3>Taught Courses and other Supervision</h3>
 <ul>
+<li><p>Lecturer for the UCL Child and Adolescent Mental Health MSc course</p></li>
+<li><p>Lecturer for the UCL Child and Adolescent Mental Health Module of MSc Psychiatry course</p></li>
 <li><p>Exam marker at UCL’s Depression and Anxiety MSc module</p></li>
-<li><p>Lecturer at UCL’s Child and Adolescent Mental Health MSc</p></li>
 <li><p>Dissertation Supervisor at UCL’s Child and Adolescent Mental Health MSc</p></li>
 <li><p>Academic Training Director for Trainees in Child Psychiatry. I had volunteered to be the Academic Director of the Maudsley Hospital’s Child Psychiatry Training Scheme. In this position I was responsible for the content and process of trainees’ academic learning. This included organizing speaker series, modifying training content, assessing competencies of trainees in relation to the expected curriculum and devising innovative ways to improve teaching. 2010 - 2016</p></li>
 <li><p>Member of the Institute of Psychiatry, Psychology and Neurosience (IoPPN) PhD Committee represeneting the Department of Child and Adolescent Psychiatry, 2012- 2016</p></li>
@@ -1950,15 +1972,15 @@ I have recently received two prizes for my mentorship at NIH, namely the - 2019 
 <tbody>
 <tr class="odd">
 <td align="right">1</td>
-<td align="left">Prabhakar J, Nielson DM, Stringaris (2022) Origins of Anhedonia in Childhood and Adolescence,In Pizzagali D (Ed) Current Topics in Behavioural Neuroscience. Springer</td>
+<td align="left">Prabhakar J, Nielson DM, <strong>Stringaris</strong> (2022) Origins of Anhedonia in Childhood and Adolescence,In Pizzagali D (Ed) Current Topics in Behavioural Neuroscience. Springer</td>
 </tr>
 <tr class="even">
 <td align="right">2</td>
-<td align="left">O’Callaghan, G. &amp; Stringaris, A (2019) Reward Processing in Adolescent Depression. In C Harmer &amp; T. Baune (Eds.) Cognitive Dimensions of Major Depressive Disorder, Oxford University Press</td>
+<td align="left">O’Callaghan, G. &amp; <strong>Stringaris </strong>, A (2019) Reward Processing in Adolescent Depression. In C Harmer &amp; T. Baune (Eds.) Cognitive Dimensions of Major Depressive Disorder, Oxford University Press</td>
 </tr>
 <tr class="odd">
 <td align="right">3</td>
-<td align="left">Stringaris, A., &amp; Vidal-Ribas, P. (2018). Disruptive Mood Dysregulation Disorder. In M. Ebert, J. Leckman &amp; I. Petrakis (Eds.), Current Diagnosis &amp; Treatment Psychiatry (Third ed.): Lange Medical Books/McGraw-Hill.</td>
+<td align="left"><strong>Stringaris </strong>, A., &amp; Vidal-Ribas, P. (2018). Disruptive Mood Dysregulation Disorder. In M. Ebert, J. Leckman &amp; I. Petrakis (Eds.), Current Diagnosis &amp; Treatment Psychiatry (Third ed.): Lange Medical Books/McGraw-Hill.</td>
 </tr>
 <tr class="even">
 <td align="right">4</td>
@@ -1994,12 +2016,12 @@ I have recently received two prizes for my mentorship at NIH, namely the - 2019 
 </tr>
 </tbody>
 </table>
-<p><strong>Publications as Preprints</strong></p>
+<p><strong>Publications accepted</strong></p>
 <table>
 <tbody>
 <tr class="odd">
 <td align="right">1</td>
-<td align="left">Jangraw DC, Keren H, Bedder RL, Rutledge RB, Perreira F, Thomas AG,Pine DS, Zheng C, Nielson, DM , <strong>Stringaris</strong> A (2021) Passage-of-Time Dysphoria: A Highly Replicable Decline in Mood During Rest and Simple Tasks that is Moderated by Depression, Psyarxiv preprint</td>
+<td align="left">Jangraw DC, Keren H, Bedder RL, Rutledge RB, Perreira F, Thomas AG,Pine DS, Zheng C, Nielson, DM , <strong>Stringaris</strong> A (2021) A Highly Replicable Decline in Mood During Rest and Simple Tasks, <em>Nature Human Behaviour</em></td>
 </tr>
 </tbody>
 </table>
